Added wpml all import plugin and modified gitignore.

--- a/site/.gitignore
+++ b/site/.gitignore
@@ -13,6 +13,7 @@ web/app/plugins/*
 !web/app/plugins/wpml-string-translation
 !web/app/plugins/wpml-translation-management
 !web/app/plugins/sitepress-multilingual-cms
+!web/app/plugins/wpml-all-import
 
 #include wpai plugins
 !web/app/plugins/wp-all-import-pro
