modified mail and added jetpack plugin

--- a/trellis/group_vars/all/mail.yml
+++ b/trellis/group_vars/all/mail.yml
@@ -1,6 +1,6 @@
 # Documentation: https://roots.io/trellis/docs/mail/
-mail_smtp_server: smtp.mailgun.org:587
+mail_smtp_server: smtp.sendgrid.net:587
 mail_admin: admin@tomtech.xyz
 mail_hostname: tomtech.xyz
-mail_user: admin@tomtech.xyz
+mail_user: kaitung123
 mail_password: "{{ vault_mail_password }}" # Define this variable in group_vars/all/vault.yml
